--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,7 @@ services:
       SMTP_USE_TLS: ${SMTP_USE_TLS}
 
   worker:
-    image: noletengine/authentik:latest
+    image: noletengine/authentik:worker
     container_name: authentik-worker
     restart: unless-stopped
     depends_on:
@@ -76,7 +76,9 @@ services:
       SMTP_USE_TLS: ${SMTP_USE_TLS}
 
   nginx:
-    image: nginx:alpine
+    build:
+      context: .
+      dockerfile: nginx.Dockerfile
     container_name: authentik-nginx
     restart: unless-stopped
     depends_on:
@@ -86,7 +88,7 @@ services:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-   #  - /etc/letsencrypt:/etc/letsencrypt:ro # Only if nginx is inside Docker
+      - ./ssl:/etc/ssl/private:ro  # optional TLS mount
 
 volumes:
   postgres_data:
