--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -88,7 +88,7 @@ services:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./ssl:/etc/ssl/private:ro  # optional TLS mount
+      - /etc/letsencrypt/live/authentik.srespace.tech:/etc/letsencrypt/live/authentik.srespace.tech:ro #TLS Mount
 
 volumes:
   postgres_data:
