Add CI/CD workflow for building and deploying all Authentik microservices

--- a/argocd/application.yaml
+++ b/argocd/application.yaml
@@ -4,16 +4,20 @@ metadata:
   name: authentik
   namespace: argocd
 spec:
-  destination:
-    namespace: authentik
-    server: https://kubernetes.default.svc
+  project: authentik
   source:
     repoURL: https://github.com/nolet7/authentik-ci.git
-    targetRevision: main
-    path: helm/authentik
-  project: default
+    targetRevision: HEAD
+    path: helm
+    helm:
+      valueFiles:
+        - values.yaml
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: authentik
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
-
+    syncOptions:
+      - CreateNamespace=true
