--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,10 @@ services:
       retries: 5
 
   authentik:
-    image: noletengine/authentik:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: noletengine/authentik:${VERSION:-latest}
     container_name: authentik-server
     restart: unless-stopped
     depends_on:
@@ -55,7 +58,10 @@ services:
       SMTP_USE_TLS: ${SMTP_USE_TLS}
 
   worker:
-    image: noletengine/authentik:worker
+    build:
+      context: .
+      dockerfile: Dockerfile
+    image: noletengine/authentik-worker:${VERSION:-latest}
     container_name: authentik-worker
     restart: unless-stopped
     depends_on:
@@ -79,6 +85,7 @@ services:
     build:
       context: .
       dockerfile: nginx.Dockerfile
+    image: noletengine/nginx:${VERSION:-latest}
     container_name: authentik-nginx
     restart: unless-stopped
     depends_on:
@@ -88,7 +95,7 @@ services:
       - "80:80"
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
-      - /etc/letsencrypt/live/authentik.srespace.tech:/etc/letsencrypt/live/authentik.srespace.tech:ro #TLS Mount
+      - /etc/letsencrypt/live/authentik.srespace.tech:/etc/letsencrypt/live/authentik.srespace.tech:ro
 
 volumes:
   postgres_data:
