--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -52,26 +52,19 @@ jobs:
       - name: Docker login
         run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Build and tag all images
+      - name: Build all images using docker-compose
         run: |
-          docker build -f Dockerfile.authentik -t noletengine/authentik:${{ env.VERSION }} \
-            --build-arg AUTHENTIK_SECRET_KEY=${{ env.AUTHENTIK_SECRET_KEY }} .
-          docker tag noletengine/authentik:${{ env.VERSION }} noletengine/authentik:latest
-
-          docker build -f Dockerfile.authentik -t noletengine/authentik-worker:${{ env.VERSION }} \
-            --build-arg AUTHENTIK_SECRET_KEY=${{ env.AUTHENTIK_SECRET_KEY }} .
-          docker tag noletengine/authentik-worker:${{ env.VERSION }} noletengine/authentik-worker:latest
-
-          docker build -f Dockerfile.nginx -t noletengine/nginx:${{ env.VERSION }} .
-          docker tag noletengine/nginx:${{ env.VERSION }} noletengine/nginx:latest
-
-          docker build -f Dockerfile.redis -t noletengine/redis:${{ env.VERSION }} .
-          docker tag noletengine/redis:${{ env.VERSION }} noletengine/redis:latest
-
-          docker build -f Dockerfile.postgres -t noletengine/postgres:${{ env.VERSION }} \
+          docker compose build \
+            --build-arg VERSION=${{ env.VERSION }} \
+            --build-arg AUTHENTIK_SECRET_KEY=${{ env.AUTHENTIK_SECRET_KEY }} \
             --build-arg POSTGRES_USER=${{ env.POSTGRES_USER }} \
-            --build-arg POSTGRES_PASSWORD=${{ env.POSTGRES_PASSWORD }} .
-          docker tag noletengine/postgres:${{ env.VERSION }} noletengine/postgres:latest
+            --build-arg POSTGRES_PASSWORD=${{ env.POSTGRES_PASSWORD }} \
+            --build-arg DATABASE_URL=${{ env.DATABASE_URL }} \
+            --build-arg SMTP_HOST=${{ env.SMTP_HOST }} \
+            --build-arg SMTP_PORT=${{ env.SMTP_PORT }} \
+            --build-arg SMTP_USER=${{ env.SMTP_USER }} \
+            --build-arg SMTP_PASS=${{ env.SMTP_PASS }} \
+            --build-arg SMTP_USE_TLS=${{ env.SMTP_USE_TLS }}
 
       - name: Push images to Docker Hub
         run: |
