--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,19 @@ version: "3.8"
 
 services:
   redis:
+    build:
+      context: .
+      dockerfile: Dockerfile.redis
     image: noletengine/redis:${VERSION:-latest}
     container_name: authentik-redis
     restart: unless-stopped
     volumes:
       - redis_data:/data
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
 
   postgres:
+    build:
+      context: .
+      dockerfile: Dockerfile.postgres
     image: noletengine/postgres:${VERSION:-latest}
     container_name: authentik-postgres
     restart: unless-stopped
@@ -25,13 +26,11 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: authentik
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U $${POSTGRES_USER}"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
 
   authentik:
+    build:
+      context: .
+      dockerfile: Dockerfile
     image: noletengine/authentik:${VERSION:-latest}
     container_name: authentik-server
     restart: unless-stopped
@@ -55,6 +54,9 @@ services:
       SMTP_USE_TLS: ${SMTP_USE_TLS}
 
   worker:
+    build:
+      context: .
+      dockerfile: Dockerfile
     image: noletengine/authentik-worker:${VERSION:-latest}
     container_name: authentik-worker
     restart: unless-stopped
@@ -76,6 +78,9 @@ services:
       SMTP_USE_TLS: ${SMTP_USE_TLS}
 
   nginx:
+    build:
+      context: .
+      dockerfile: Dockerfile.nginx
     image: noletengine/nginx:${VERSION:-latest}
     container_name: authentik-nginx
     restart: unless-stopped
