--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -52,32 +52,25 @@ jobs:
       - name: Docker login
         run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
 
-      - name: Build all images using docker-compose
+      - name: Build images that require Dockerfiles
         run: |
-          docker compose build \
-            --build-arg VERSION=${{ env.VERSION }} \
-            --build-arg AUTHENTIK_SECRET_KEY=${{ env.AUTHENTIK_SECRET_KEY }} \
-            --build-arg POSTGRES_USER=${{ env.POSTGRES_USER }} \
-            --build-arg POSTGRES_PASSWORD=${{ env.POSTGRES_PASSWORD }} \
-            --build-arg DATABASE_URL=${{ env.DATABASE_URL }} \
-            --build-arg SMTP_HOST=${{ env.SMTP_HOST }} \
-            --build-arg SMTP_PORT=${{ env.SMTP_PORT }} \
-            --build-arg SMTP_USER=${{ env.SMTP_USER }} \
-            --build-arg SMTP_PASS=${{ env.SMTP_PASS }} \
-            --build-arg SMTP_USE_TLS=${{ env.SMTP_USE_TLS }}
+          docker compose build nginx
 
-      - name: Push images to Docker Hub
+      - name: Tag prebuilt authentik + worker and push all images
         run: |
+          docker pull noletengine/authentik:latest
+          docker pull noletengine/authentik-worker:latest
+
+          docker tag noletengine/authentik:latest noletengine/authentik:${{ env.VERSION }}
+          docker tag noletengine/authentik-worker:latest noletengine/authentik-worker:${{ env.VERSION }}
+          docker tag noletengine/nginx:latest noletengine/nginx:${{ env.VERSION }}
+
           docker push noletengine/authentik:${{ env.VERSION }}
           docker push noletengine/authentik:latest
           docker push noletengine/authentik-worker:${{ env.VERSION }}
           docker push noletengine/authentik-worker:latest
           docker push noletengine/nginx:${{ env.VERSION }}
           docker push noletengine/nginx:latest
-          docker push noletengine/redis:${{ env.VERSION }}
-          docker push noletengine/redis:latest
-          docker push noletengine/postgres:${{ env.VERSION }}
-          docker push noletengine/postgres:latest
 
       - name: Setup kubeconfig
         run: |
@@ -99,10 +92,10 @@ jobs:
             --set vault.secretPath=secret/Dev-secret/authentik \
             --set image.tag=${{ env.VERSION }} \
             --set worker.tag=${{ env.VERSION }} \
-            --set redis.image.repository=noletengine/redis \
-            --set redis.image.tag=${{ env.VERSION }} \
-            --set postgresql.image.repository=noletengine/postgres \
-            --set postgresql.image.tag=${{ env.VERSION }} \
+            --set redis.image.repository=redis \
+            --set redis.image.tag=alpine \
+            --set postgresql.image.repository=postgres \
+            --set postgresql.image.tag=15 \
             --set nginx.image.tag=${{ env.VERSION }} \
             --values helm/values.yaml
 
